Transferring the dt and django-template aspects into caprende. Upgrading pylint versions.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="../../favicon.ico">
 
 
-    <title>{% block title %}{% endblock %}django-template</title>
+    <title>{% block title %}{% endblock %}Caprende</title>
 
     <!-- Bootstrap core CSS -->
     <!-- <link href="../../dist/css/bootstrap.min.css" rel="stylesheet"> -->
