--- a/src/templates/home_visitor.html
+++ b/src/templates/home_visitor.html
@@ -7,8 +7,8 @@
 	<div class="col-sm-10 col-sm-offset-1">
 		<div class="jumbotron">
 
-			<h1>Django Template</h1>
-			<p>This is the Django template that all future website ideas can be spawned from. It includes a home landing page for potential users, a dashboard, a profile, complete user registration, and most importantly a secure authentication system.</p>
+			<h1>Caprende</h1>
+			<p>This is the Caprende that all future website ideas can be spawned from. It includes a home landing page for potential users, a dashboard, a profile, complete user registration, and most importantly a secure authentication system.</p>
 			<p>To see the difference between static and fixed top navbars, just scroll.</p>
 			<p>
 			  <a class="btn btn-lg btn-primary" href="{% url 'account_login' %}" role="button">View Template &raquo;</a>
