--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -3,12 +3,12 @@
 		<div class="col-sm-3 col-md-2"></div>
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
 			<div class='container'>
-				<p class='text-muted'>&copy; 2016 django-template Project</p>
+				<p class='text-muted'>&copy; 2016 Caprende LLC</p>
 			</div>
 		</div>
 	{% else %}
 		<div class='container'>
-			<p class='text-muted'>&copy; 2016 django-template Project</p>
+			<p class='text-muted'>&copy; 2016 Caprende LLC</p>
 		</div>
 	{% endif %}
 </footer>
