Implementation of the user profile object with the edit profile object. New official navbar as well.

--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -2,13 +2,14 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
         <div class="profile">
-            {% if user.has_image %}
-                <a href="{% url 'edit_profile' %}"><img class="img-circle" src="{{ user.image.url }}" width="100" height="100" class="img-responsive"></a>
+            {% if user.profile.has_pf_picture %}
+                <a href="{% url 'edit_profile' %}"><img class="img-circle" src="{{ user.profile.profile_image.url }}" width="100" height="100" class="img-responsive"></a>
             {% else %}
                 <img class="img-circle" src="{% static 'img/users/profile.jpg' %}" width="100" height="100" class="img-responsive">
             {% endif %}
-            <h3>{{ user.get_full_name }}</h3>
-            <p>Affiliated Entity</p>
+            <h3>{{ user.profile.get_full_name }}</h3>
+            <p>{{ user.profile.university }}</p>
+            <small>{{ user.profile.major }}</small>
         </div>
         <hr>
         <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
