--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -12,8 +12,15 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'edit_profile' %}">Profile</a></li>
-                    <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                        </ul>
+                    </li>
                 {% else %}
                     <li><a href="{% url 'account_login' %}">Login</a></li>
                 {% endif %}
