--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -2,10 +2,10 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
         <div class="profile">
-            {% if user.profile.has_pf_picture %}
-                <a href="{% url 'edit_profile' %}"><img class="img-circle" src="{{ user.profile.profile_image.url }}" width="100" height="100" class="img-responsive"></a>
+            {% if user.profile.profile_image %}
+                <img class="img-circle" src="{{ user.profile.profile_image.url }}" width="100" height="100" class="img-responsive">
             {% else %}
-                <img class="img-circle" src="{% static 'img/users/profile.jpg' %}" width="100" height="100" class="img-responsive">
+                <a href="{% url 'edit_profile' %}"><img class="img-circle" src="{% static 'img/users/profile.jpg' %}" width="100" height="100" class="img-responsive"></a>
             {% endif %}
             <h3>{{ user.profile.get_full_name }}</h3>
             <p>{{ user.profile.university }}</p>
