--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -12,12 +12,21 @@
             <small>{{ user.profile.major }}</small>
         </div>
         <hr>
-        <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Reports</a></li>
-        <li><a href="#">Analytics</a></li>
-        <li><a href="#">Export</a></li>
+        <li class="active"><a href="#">Dashboard<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Practice Page</a></li>
+        <li><a href="#">Peer Analytics</a></li>
+        <li><a href="#">In Depth</a></li>
     </ul>
-    <ul class="nav nav-sidebar">
+        <div class="profile">
+                {% if user.profile.motivational_image %}
+                <img class="img-circle" src="{{ user.profile.motivational_image.url }}" width="100" height="100" class="img-responsive">
+            {% else %}
+                <a href="{% url 'edit_profile' %}"><img class="img-circle" src="{% static 'img/users/profile.jpg' %}" width="100" height="100" class="img-responsive"></a>
+            {% endif %}
+            <h3>On your way!</h3>
+            <p>Stay motivated.</p>
+        </div>
+<!--     <ul class="nav nav-sidebar">
         <li><a href="">Nav item</a></li>
         <li><a href="">Nav item again</a></li>
         <li><a href="">One more nav</a></li>
@@ -28,5 +37,5 @@
         <li><a href="">Nav item again</a></li>
         <li><a href="">One more nav</a></li>
         <li><a href="">Another nav item</a></li>
-    </ul>
+    </ul> -->
 </div>
