Adding the question and question response methodology. Updates to the sidebar. New test suites.

--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -12,8 +12,8 @@
             <small>{{ user.profile.major }}</small>
         </div>
         <hr>
-        <li class="active"><a href="#">Dashboard<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Practice Page</a></li>
+        <li><a href="#">Dashboard<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="#">Practice Page</a></li>
         <li><a href="#">Peer Analytics</a></li>
         <li><a href="#">In Depth</a></li>
     </ul>
