--- a/src/templates/questions/question_review.html
+++ b/src/templates/questions/question_review.html
@@ -35,6 +35,47 @@
         {% endfor %}
         <br>
     </div>
+
+    <div class='row'>
+        <h1>Comments</h1>
+        <hr>
+        <form method='POST' action='{% url "comment_create" %}'> {% csrf_token %}
+            <input type='hidden' name='question_id' value='{{ question.id }}'/>
+            {% crispy comment_form comment_form.helper %}
+        </form>
+        <br>
+
+        <table class = 'table'>
+            {% for comment in comments %}
+                <tr><td>
+                    <br>
+                    <div class="jumbotron">
+                        {{ comment.get_comment }}
+                        <small> via {{ comment.user }} | {{ comment.timestamp|timesince }} ago</small>
+                        {% if not comment.is_child %} 
+                            <ul>
+                                {% for child in comment.get_children %}
+                                <li>
+                                    {{ child.get_comment }} 
+                                    <small>via {{ child.user }}</small>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                            <a href='{{ comment.get_absolute_url }}'>View Thread</a> | <a class='reply_btn'>Reply</a>
+                            <div class="reply_comment">
+                                <form method='POST' action='{% url "comment_create" %}'> {% csrf_token %}
+                                    <input type='hidden' name='parent_id' value='{{ comment.id }}'/>
+                                    <input type='hidden' name='question_id' value='{{ question.id }}'/>
+                                    {% crispy comment_form comment_form.helper %}
+                                </form>
+                            </div>
+                        {% endif %}
+                    </div>
+                </td></tr>
+            {% endfor %}
+
+        </table>
+    </div>
 </div>
 
 {% endblock content %}
