Adding the category and subcategory datasets to the branch to be merged into master.

--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -12,7 +12,7 @@
             <small>{{ user.profile.major }}</small>
         </div>
         <hr>
-        <li><a href="#">Dashboard<span class="sr-only">(current)</span></a></li>
+        <li><a href="{% url 'dashboard' %}">Dashboard<span class="sr-only">(current)</span></a></li>
         <li class="active"><a href="#">Practice Page</a></li>
         <li><a href="#">Peer Analytics</a></li>
         <li><a href="#">In Depth</a></li>
