--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -13,7 +13,7 @@
         </div>
         <hr>
         <li><a href="{% url 'dashboard' %}">Dashboard<span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="#">Practice Page</a></li>
+        <li class="active"><a href="{% url 'next_question' %}">Practice Page</a></li>
         <li><a href="#">Peer Analytics</a></li>
         <li><a href="#">In Depth</a></li>
     </ul>
