--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -37,13 +37,15 @@
         {% if messages and user.is_authenticated %}
             <div class='col-sm-10 col-md-10 col-sm-offset-3 col-md-offset-2' style='text-align:left'>
                 {% for message in messages %}
-                  <div class="alert alert-success" role="alert">{{ message }}</div>
+                    <div class="alert {% if 'error' in message.tags %}alert-danger{%else %}alert-success{% endif %}" role="alert">{% if 'safe' in message.tags %} {{ message|safe }} {% else %} {{ message }} {% endif %}
+                    </div>
                 {% endfor %}
             </div>
         {% endif %}
         {% if messages and not user.is_authenticated %}
             {% for message in messages %}
-                <div class="alert alert-success" role="alert">{{ message }}</div>
+                <div class="alert {% if 'error' in message.tags %}alert-warning{%else %}alert-success{% endif %}" role="alert">{% if 'safe' in message.tags %} {{ message|safe }} {% else %} {{ message }} {% endif %}
+                </div>
             {% endfor %}
         {% endif %}
 
