Adding the figures display for any questions that require an image or a file.

--- a/src/templates/questions/question_detail.html
+++ b/src/templates/questions/question_detail.html
@@ -12,6 +12,9 @@
         <hr>
         <form method='POST' action='' enctype='multipart/form-data'> {% csrf_token %}
             {% if question.figure %}
+                <div class="questionfigure">
+                    <img text-align="center" class="img" src="{{ question.figure.url }}" class="img-responsive">
+                </div>
             {% endif %}
             <p>{{ question.question_text|safe }}</p>
             {% for item, value, correct in question.choices %}
