--- a/src/templates/questions/question_review.html
+++ b/src/templates/questions/question_review.html
@@ -21,16 +21,21 @@
         </div>
         <p>{{ question.passage }}</p>
         <hr>
+        {% if question.figure %}
+            <div class="questionfigure">
+                <img text-align="center" class="img" src="{{ question.figure.url }}" class="img-responsive">
+            </div>
+        {% endif %}
         <p>{{ question.question_text|safe }}</p>
         {% for item, value, correct in question.choices %}
             {% if correct and value == response %}
-                <font color="green"><input type="radio" checked="checked" name="answer" value="{{ value }}"> {{ item }}<br></font>
+                <font color="green"><input type="radio" checked="checked" name="answer" value="{{ value }}"> {{ item|safe }}<br></font>
             {% elif correct %}
-                <font color="green"><input type="radio" name="answer" value="{{ value }}"> {{ item }}<br></font>
+                <font color="green"><input type="radio" name="answer" value="{{ value }}"> {{ item|safe }}<br></font>
             {% elif value == response %}
-                <font color="red"><input type="radio" checked="checked" name="answer" value="{{ value }}"> {{ item }}<br></font>
+                <font color="red"><input type="radio" checked="checked" name="answer" value="{{ value }}"> {{ item|safe }}<br></font>
             {% else %}
-                <font color="black"><input type="radio" name="answer" value="{{ value }}"> {{ item }}<br></font>
+                <font color="black"><input type="radio" name="answer" value="{{ value }}"> {{ item|safe }}<br></font>
             {% endif %}
         {% endfor %}
         <br>
