--- a/static/static_dirs/css/base.css
+++ b/static/static_dirs/css/base.css
@@ -137,10 +137,14 @@ body {
 }
 
 .footer {
-  background-color:#C5C5C5;
+  background-color: #C5C5C5;
   min-height: 60px;
-  padding:20px 0px;
-  text-align:center;
-  margin-top:50px;
+  padding: 20px 0px;
+  text-align: center;
+  margin-top: 50px;
 }
 
+.questionfigure {
+  text-align: center;
+  padding: 10px 20px;
+}
