--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,6 +11,8 @@
 
 
     <title>{% block title %}{% endblock %}Caprende</title>
+    {% block javascript %}
+    {% endblock %}
 
     <!-- Bootstrap core CSS -->
     <!-- <link href="../../dist/css/bootstrap.min.css" rel="stylesheet"> -->
