--- a/static/static_dirs/css/base.css
+++ b/static/static_dirs/css/base.css
@@ -106,6 +106,7 @@ body {
 
 .jumbotron h1 {
     font-size: 40px;
+    text-align: center;
 }
 .jumbotron h2 {
     font-size: 35px;
@@ -144,7 +145,40 @@ body {
   margin-top: 50px;
 }
 
+.pager .prev>a, .pager .prev>span {
+    float: left;
+}
+
+.pager .next>a, .pager .next>span {
+    float: right;
+}
+
 .questionfigure {
   text-align: center;
   padding: 10px 20px;
+}
+
+.passage {
+  background-color: #FFFFFF;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 8px;
+  padding-bottom: 1px;
+  border-radius: 5px;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.passage hr {
+  height: 1px;
+  color: #C5C5C5;
+  background-color: #C5C5C5;
+  border: none;
+  padding-bottom: 0px;
+}
+
+.source p {
+  padding-top: 0px;
+  font-size: 0.875em;
+  font-weight: bold;
+  padding-bottom: 3px;
 }
