Changing the word from next to skip on the question_detail.html page.

--- a/src/templates/questions/question_detail.html
+++ b/src/templates/questions/question_detail.html
@@ -24,7 +24,7 @@
                     {% if question.get_next_url %}
                         <nav>
                           <ul class="pager">
-                            <li class="next"><a href="{{ question.get_next_url }}">Next <span aria-hidden="true">&rarr;</span></a></li>
+                            <li class="next"><a href="{{ question.get_next_url }}">Skip <span aria-hidden="true">&rarr;</span></a></li>
                           </ul>
                         </nav>
                     {% endif %}
