--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -66,4 +66,47 @@
         {% include 'footer.html' %}
     </body>
     {% include 'javascript.html' %}
+    <script>
+      $(document).ready(function(){
+        // alert('jquery woking');
+        {% block jquery %}
+        {% endblock %}
+      });
+    </script>
+    <script>
+    $(document).ready(function(){
+      $(".notification-toggle").click(function(e){
+        e.preventDefault();
+        $.ajax({
+          type: "POST",
+          url: "{% url 'get_notifications_ajax' %}",
+          data: {
+            csrfmiddlewaretoken: "{{ csrf_token }}",
+          },
+          success: function(data){
+            $("#notification_dropdown").html(' <li role="presentation" class="dropdown-header">Notifications</li>');
+            var count = data.count
+            if (count == 0) {
+              var url = '{% url "notifications_all" %}'
+              $("#notification_dropdown").append("<li><a href='" + url+ "'>View All Notifications</a></li>")
+            } else {
+              $(data.notifications).each(function(){
+                var link = this;
+                $("#notification_dropdown").append("<li>" + link + "</li>")
+
+              })
+            }
+
+          },
+          error: function(rs, e) {
+            console.log(rs);
+            console.log(e);
+          }
+
+        })
+
+      })
+
+    })
+    </script>
 </html>
