--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -12,6 +12,11 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class='glyphicon glyphicon-inbox' aria-hidden="true"></span> <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu" id='notification_dropdown'>
+                        </ul>
+                    </li>
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
