--- a/src/templates/comments/comment_thread.html
+++ b/src/templates/comments/comment_thread.html
@@ -15,14 +15,17 @@
 				{% if not comment.is_child %} 
 					<ul>
 						{% for child in comment.get_children %}
-						<li>{{ child.get_comment }} 
-							<small>via {{ child.user }}</small></li>
+						<li>
+                            {{ child.get_comment }} 
+							<small>via {{ child.user }}</small>
+                        </li>
 						{% endfor %}
 					</ul>
 					<div>
 						<form method='POST' action='{% url "comment_create" %}'> {% csrf_token %}
-						<input type='hidden' name='parent_id' value='{{ comment.id }}'/>
-						{% crispy form form.helper %}
+    						<input type='hidden' name='parent_id' value='{{ comment.id }}'/>
+                            <input type='hidden' name='question_id' value='{{ comment.question.id }}'/>
+    						{% crispy form form.helper %}
 						</form>
 					</div>
 				{% endif %}
