--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -7,3 +7,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css"></script>
+
+<script src="https://js.braintreegateway.com/js/braintree-2.22.2.min.js"></script>
