--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -21,6 +21,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
                         <ul class="dropdown-menu">
+                            <li><a href="{% url 'user_account' %}">Account Home</a></li>
                             <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="{% url 'account_logout' %}">Logout</a></li>
