Doing major renovations to the HTML and CSS of Caprende. Added a new color scheme. Implemented cleanup for billing and questions and other views.

--- a/src/templates/analytics/dashboard.html
+++ b/src/templates/analytics/dashboard.html
@@ -4,94 +4,60 @@
 
 {% block title %}Question | {% endblock %}
 
-{% block javascript %}
-    <script src="{% static 'raphael-2.1.4.min.js' %}"></script>
-    <script src="{% static 'justgage.js' %}"></script>
-{% endblock %}
-
 {% block content %}
-<style>
-      #g1, #g2, #g3 {
-        width:170px; height:140px;
-        display: inline-block; 
-        margin: 1em;
-      }
 
-</style>
-<div class="col-sm-8 col-sm-offset-3 main">
-    <div class="jumbotron">
-        <div  id = "g1"></div>
-        <div  id = "g2"></div>
-        <div  id = "g3"></div>
+<div class='row'>
+    <div class="col-sm-10 col-sm-offset-2 main dashboard">
+        <h1>Caprende Analytics</h1>
+        <hr/><br>
+        <div class="gaugeholder">
+            <div class="gauge">
+                <h1>70%</h1>
+                <h2>6 of 9</h2>
+            </div>
+            <h4>Inference</h4>
+            <span>Reading Comprehension</span>
+        </div>
+        <div class="gaugeholder">
+            <div class="gauge">
+                <h1>75%</h1>
+                <h2>9 of 12</h2>
+            </div>
+            <h4>Direct Comprehension</h4>
+            <span>Reading Comprehension</span>
+        </div>
+        <div class="gaugeholder">
+            <div class="gauge">
+                <h1>80%</h1>
+                <h2>7 of 9</h2>
+            </div>
+            <h4>Arc Lengths and Areas for Sectors</h4>
+            <span>Geometry and Measurement</span>
+        </div>
+    </div>
+</div>
+
+<div class='row'>
+    <div class="col-sm-10 col-sm-offset-2 main">
         <h1>{{ question.category_string }}</h1><br>
 
-        <table class = 'table'>
-            {% for dataset in weakest_cats %}
+        <table class = 'table table-striped'>
+            <thead>
                 <tr>
-                    <td>{{ dataset.category.name }}</td>
+                  <th>Subcategory</th>
+                  <th>Category</th>
+                  <th>Percentage</th>
+                </tr>
+            </thead>
+            {% for dataset in subcats %}
+                <tr>
+                    <td>{{ dataset.subcategory.name }}</td>
+                    <td>{{ dataset.subcategory.category.name }}</td>
                     <td>{{ dataset.percent }}</td>
                 </tr>
             {% endfor %}
         </table>
-
     </div>
 </div>
-<script>
-var g1, g2, g3, g4;
-window.onload= function(){
-
-var g1 = new JustGage({
-    id: "g1",
-    value: {{ weakest_cats.0.percent }},
-    min: 0,
-    max: 100,
-    title: "{{ weakest_cats.0.category.name }}",
-    label: "",
-    levelColors: [
-    "#ff3b3b",
-    "#00a2ff",
-    "#62d184",
-    ],
-    startAnimationTime: 2000,
-    startAnimationType: "bounce",
-    gaugeWidthScale: 0.25
-
-});
-var g2 = new JustGage({
-    id: "g2",
-    value: {{ weakest_cats.1.percent }},
-    min: 0,
-    max: 100,
-    title: "{{ weakest_cats.1.category.name }}",
-    label: "",
-    levelColors: [
-    "#ff3b3b",
-    "#00a2ff",
-    "#62d184",
-    ],
-    startAnimationTime: 2000,
-    startAnimationType: "bounce",
-    gaugeWidthScale: 0.25
-});
-var g3 = new JustGage({
-    id: "g3",
-    value: {{ weakest_cats.2.percent }},
-    min: 0,
-    max: 100,
-    title: "{{ weakest_cats.2.category.name }}",
-    label: "",
-    levelColors: [
-    "#ff3b3b",
-    "#ffff27",
-    "#62d184",
-    ],
-    startAnimationTime: 2000,
-    startAnimationType: "bounce",
-    gaugeWidthScale: 0.25
-});
-
-
-};
-</script>
 
 {% endblock content %}
