--- a/src/templates/billing/history.html
+++ b/src/templates/billing/history.html
@@ -3,21 +3,22 @@
 
 {% block content %}
 <div class='row'>
-	<div class="col-sm-5 col-sm-offset-3 main">
+	<div class="col-sm-7 col-sm-offset-2 main">
 	<h1>Billing History</h1>
-
 	</div>
 	<div class='col-sm-2'>
-	{% if not request.user.is_member %}
-	<br/>
-	<a class='btn btn-warning btn-block' href='{% url "account_upgrade" %}'>Upgrade Account</a>
-	{% endif %}
+		<div class='upgrade-membership-btn'>
+			{% if not request.user.is_member %}
+				<a class='btn btn-warning btn-block' href='{% url "account_upgrade" %}'>Upgrade Account</a>
+			{% endif %}
+		</div>
 	</div>
 </div>
 
 <div class='row'>
-	<div class="col-sm-7 col-sm-offset-3 main">
-		<table class='table'>
+	<div class="col-sm-10 col-sm-offset-2 main">
+		<br>
+		<table class='table table-striped'>
 
 		<thead>
 			<th>Order #</th>
