--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,11 +1,11 @@
 <footer class='footer' style='text-align:center'>
 	{% if user.is_authenticated %}
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
-			<p class='text-muted'>&copy; 2016 Caprende LLC</p>
+			<p>&copy; 2016 Caprende LLC</p>
 		</div>
 	{% else %}
 		<div class="col-sm-3 col-md-2">
-			<p class='text-muted'>&copy; 2016 Caprende LLC</p>
+			<p>&copy; 2016 Caprende LLC</p>
 		</div>
 	{% endif %}
 </footer>
