--- a/src/templates/questions/question_review.html
+++ b/src/templates/questions/question_review.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="col-sm-8 col-sm-offset-3 main">
+<div class="col-sm-9 col-sm-offset-2 main">
     <div class="jumbotron">
         <div class="row">
                 <div class="col-sm-2">
@@ -17,9 +17,10 @@
                         </nav>
                     {% endif %}
                 </div>
-            <div class="col-sm-8" text-align="center">
-                <h1>{{ question.category_string }}</h1>
-            </div>
+                <div class="col-sm-8 bluebox" text-align="center">
+                    <h1>{{ question.category_string }}</h1><br>
+                    <header><h4>{{ correct }} / {{ total }} questions answered correctly</h1></header>
+                </div>
                 <div class="col-sm-2">
                     {% if question.get_next_url %}
                         <nav>
