--- a/src/templates/users/edit_profile.html
+++ b/src/templates/users/edit_profile.html
@@ -5,10 +5,9 @@
 
 {% block content %}
 
-<div class="col-sm-7 col-sm-offset-3 main">
-	<div class="jumbotron">
+<div class="col-sm-9 col-sm-offset-2 main bluebox">
 		<h1>Edit Profile</h1>
-
+		<hr>
 		<form method='POST' action='' enctype='multipart/form-data'> {% csrf_token %}
 			{{ form|crispy }}
 			<input type='submit' class='btn btn-success btn-block' value='Update Profile' />
@@ -16,7 +15,6 @@
 		<hr>
 		<a href="{% url 'account_email' %}" class="btn btn-primary btn-block" role="button">Change Email</a>
 
-	</div>
 </div>
 
 {% endblock content %}
