--- a/src/templates/users/user_account.html
+++ b/src/templates/users/user_account.html
@@ -6,13 +6,12 @@
 
 
 <div class='row'>
-	<div class="col-sm-7 col-sm-offset-3 main">
-		<div class="jumbotron">
-			<h2>Account</h2>
+	<div class="col-sm-10 col-sm-offset-2 main bluebox">
+		<!--div class="jumbotron"-->
+			<h1>Account Settings</h1>
 			<hr/>
-			<h3>Notifications
-			<small><a href='{% url "notifications_all" %}'>View All</a></small></h3>
-			<table class='table'>
+			<h3>Notifications <small><a href='{% url "notifications_all" %}'>View All</a></small></h3>
+			<table class="table table-striped">
 				{% for note in notifications %}
 					<tr><td>{{ note|safe }}</td><td>{% if note.read %} Read {% else %} Unread {% endif %}</td></tr>
 				{% endfor %}
@@ -22,7 +21,7 @@
 			<h3>Account Options</h3>
 			<p class='lead'>
 			{% if request.user.is_member %}
-				Account active until: <b>{{ request.user.membership.date_end }}</b>
+				Account active until: <b>{{ request.user.membership.date_ended }}</b>
 			{% endif %}
 			</p>
 
@@ -39,7 +38,7 @@
 				<a href='{% url "billing_history" %}'>View All</a>
 				</small>
 			</h3>
-			<table class='table'>
+			<table class="table table-striped">
 
 			<thead>
 				<th>Order #</th>
@@ -51,7 +50,7 @@
 			<tr>
 				<td>{{ object.order_id }}</td>
 				<td>${{ object.amount }}</td>
-				<td>{{ object.card_type }}{% if object.last_four %}<br/>Last Four Digits: {{ object.last_four }}{% endif %}</td>
+				<td>{{ object.card_type }}{% if object.last_four %} | {{ object.last_four }}{% endif %}</td>
 				<td>{{ object.timestamp }}</td>
 
 			</tr>
@@ -61,7 +60,7 @@
 
 			</table>
 
-		</div>
+		<!--/div-->
 	</div>
 </div>
 
