--- a/static/static_dirs/css/base.css
+++ b/static/static_dirs/css/base.css
@@ -7,6 +7,9 @@ body {
   padding-top: 50px;
 }
 
+hr {
+  max-width: 90%;
+}
 
 /*
  * Global add-ons
@@ -21,8 +24,18 @@ body {
  * Top navigation
  * Hide default border to remove 1px line.
  */
+
+.navbar-inverse .navbar-brand {
+    color: #FFFFFF;
+}
+
 .navbar-fixed-top {
-  border: 0;
+    border: 0;
+    background-color: #205081;
+  }
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #FFFFFF;
 }
 
 /*
@@ -63,7 +76,7 @@ body {
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
   color: #fff;
-  background-color: #428bca;
+  background-color: #205081;
 }
 
 
@@ -72,7 +85,6 @@ body {
  */
 
 .main {
-  padding: 20px;
 }
 @media (min-width: 768px) {
   .main {
@@ -104,22 +116,84 @@ body {
   border-radius: 50%;
 }
 
+.bluebox header{
+  background-color: #205081;
+  border:1px solid #205081;
+  border-radius: 5px;
+}
+.bluebox h1{
+  text-align: center;
+}
+.bluebox hr {
+  padding: 0px;
+}
+.jumbotron {
+  padding: 20px;
+}
 .jumbotron h1 {
-    font-size: 40px;
-    text-align: center;
+  font-size: 40px;
+  text-align: center;
 }
 .jumbotron h2 {
-    font-size: 35px;
+  font-size: 35px;
 }
 .jumbotron p {
-    font-size: 16px;
+  font-size: 16px;
 }
 .jumbotron {
   padding-top: 20px;
 }
+.jumbotron h4 {
+  font-size: 100%;
+  color: #FFFFFF;
+  text-align: center;
+}
+
+.dashboard {
+  text-align: center;
+}
+
+.dashboard h3 {
+  text-align: left;
+}
+
+.gaugeholder {
+  padding-right: 30px;
+  padding-left: 30px;
+  display: inline-block;
+  max-width: 300px;
+  vertical-align: top;
+}
+
+.gauge {
+  background-color: #337AB7;
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  color: #FFFFFF;
+  text-align: center;
+  display: inline-block;
+}
+
+.gauge h1 {
+  font-size: 60px;
+  padding-top: 30px;
+}
+
+.gauge h2 {
+  padding-bottom: 30px;
+}
+
+.gauge span {
+  color: #000000;
+}
 
 .mainpage {
   min-height: 800px;
+}
+
+.upgrade-membership-btn {
+  padding-top: 20px;
 }
 
 .profile {
@@ -131,6 +205,7 @@ body {
 .profile img{
   display: block;
   margin: 0 auto;
+  border-radius: 0px;
 }
 
 .marketing {
@@ -138,7 +213,8 @@ body {
 }
 
 .footer {
-  background-color: #C5C5C5;
+  background-color: #205081;
+  color: #FFFFFF;
   min-height: 60px;
   padding: 20px 0px;
   text-align: center;
