--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -53,17 +53,16 @@
 
 
         <div class="container-fluid mainpage">
-            <div class="row"><br>
             {% if user.is_authenticated %}
                 {% include 'sidebar.html' %}
             {% endif %}
             {% block content %}
             {% endblock %}
-            </div>
         </div> <!-- /container -->
 
-
-        {% include 'footer.html' %}
+        <div class="row">
+            {% include 'footer.html' %}
+        </div>
     </body>
     {% include 'javascript.html' %}
     <script>
