--- a/src/templates/contact/contact_us.html
+++ b/src/templates/contact/contact_us.html
@@ -6,17 +6,16 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<div class="col-sm-9 col-sm-offset-2 main">
+<div class="col-sm-9 col-sm-offset-2 main bluebox">
 {% else %}
-<div class="col-sm-8 col-sm-offset-2 main">
+<div class="col-sm-8 col-sm-offset-2 main bluebox">
 {% endif %}
-        <h1>Contact Us</h1>
+    <h1>Contact Us</h1>
 
-        <form method='POST' action='' enctype='multipart/form-data'> {% csrf_token %}
-            {{ form|crispy }}
-            <input type='submit' class='btn btn-success btn-block' value='Contact Us' />
-        </form>
-    </div>
+    <form method='POST' action='' enctype='multipart/form-data'> {% csrf_token %}
+        {{ form|crispy }}
+        <input type='submit' class='btn btn-success btn-block' value='Contact Us' />
+    </form>
 </div>
 
 {% endblock content %}
