--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -14,8 +14,8 @@
         <hr>
         <li {% if dashboard %} class="active" {% endif %}><a href="{% url 'dashboard' %}">Dashboard<span class="sr-only">(current)</span></a></li>
         <li {% if practice %} class="active" {% endif %}><a href="{% url 'next_question' %}">Practice Page</a></li>
-        <li><a href="#">Peer Analytics</a></li>
-        <li><a href="#">In Depth</a></li>
+        <li {% if peer_analytics %} class="active" {% endif %}><a href="{% url 'peer_analytics' %}">Peer Analytics</a></li>
+        <li {% if in_depth %} class="active" {% endif %}><a href="{% url 'in_depth' %}">In Depth</a></li>
     </ul>
         <div class="profile">
                 {% if user.profile.motivational_image %}
