--- a/static/static_dirs/css/base.css
+++ b/static/static_dirs/css/base.css
@@ -116,6 +116,35 @@ hr {
   border-radius: 50%;
 }
 
+.banner {
+  /*background-image: url("../img/bridge3.jpg");
+  background-position: center;
+  align: right;*/
+}
+
+.banner .jumbotron hr{
+  border-top: 1px solid #BBB;
+}
+
+.banner .jumbotron h1{
+  text-align: left;
+}
+
+.banner .homelogin {
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+}
+
+.founders .jumbotron {
+  background-color: #205081;
+  color: white;
+  text-align: center;
+}
+.founders img {
+  width: 80%;
+}
+
 .bluebox header{
   background-color: #205081;
   border:1px solid #205081;
@@ -129,6 +158,7 @@ hr {
 }
 .jumbotron {
   padding: 20px;
+  background-color: #E7E7E7;
 }
 .jumbotron h1 {
   font-size: 40px;
@@ -215,10 +245,14 @@ hr {
 .footer {
   background-color: #205081;
   color: #FFFFFF;
-  min-height: 60px;
-  padding: 20px 0px;
+  min-height: 80px;
+  margin-top: 20px;
+  padding: 15px 0px;
   text-align: center;
-  margin-top: 50px;
+}
+
+.footer a{
+  color: #FFFFFF;
 }
 
 .pager .prev>a, .pager .prev>span {
