--- a/src/templates/analytics/dashboard.html
+++ b/src/templates/analytics/dashboard.html
@@ -10,37 +10,19 @@
     <div class="col-sm-10 col-sm-offset-2 main dashboard">
         <h1>Caprende Analytics</h1>
         <hr/><br>
+    </div>
+</div>
+<div class='row'>
+    <div class="col-sm-2 col-sm-offset-2 main dashboard">
         <div class="gaugeholder">
-            <div class="gauge">
-                <h1>70%</h1>
-                <h2>6 of 9</h2>
+            <div class="gauge gauge-offset">
+                <h1>6.9</h1>
             </div>
             <h4>Inference</h4>
             <span>Reading Comprehension</span>
         </div>
-        <div class="gaugeholder">
-            <div class="gauge">
-                <h1>75%</h1>
-                <h2>9 of 12</h2>
-            </div>
-            <h4>Direct Comprehension</h4>
-            <span>Reading Comprehension</span>
-        </div>
-        <div class="gaugeholder">
-            <div class="gauge">
-                <h1>80%</h1>
-                <h2>7 of 9</h2>
-            </div>
-            <h4>Arc Lengths and Areas for Sectors</h4>
-            <span>Geometry and Measurement</span>
-        </div>
     </div>
-</div>
-
-<div class='row'>
-    <div class="col-sm-10 col-sm-offset-2 main">
-        <h1>{{ question.category_string }}</h1><br>
-
+    <div class="col-sm-8 main dashboard">
         <table class = 'table table-striped'>
             <thead>
                 <tr>
@@ -59,5 +41,74 @@
         </table>
     </div>
 </div>
+<div class='row'>
+    <div class="col-sm-10 col-sm-offset-2 main dashboard">
+        <hr/>
+    </div>
+</div>
+<div class='row'>
+    <div class="col-sm-2 col-sm-offset-2 main dashboard">
+        <div class="gaugeholder">
+            <div class="gauge">
+                <h1>7.5</h1>
+            </div>
+            <h4>Direct Comprehension</h4>
+            <span>Reading Comprehension</span>
+        </div>
+    </div>
+    <div class="col-sm-8 main dashboard">
+        <table class = 'table table-striped'>
+            <thead>
+                <tr>
+                  <th>Subcategory</th>
+                  <th>Category</th>
+                  <th>Percentage</th>
+                </tr>
+            </thead>
+            {% for dataset in subcats %}
+                <tr>
+                    <td>{{ dataset.subcategory.name }}</td>
+                    <td>{{ dataset.subcategory.category.name }}</td>
+                    <td>{{ dataset.percent }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+<div class='row'>
+    <div class="col-sm-10 col-sm-offset-2 main dashboard">
+        <hr/>
+    </div>
+</div>
+<div class='row'>
+    <div class="col-sm-2 col-sm-offset-2 main dashboard">
+        <div class="gaugeholder">
+            <div class="gauge gauge-offset">
+                <h1>8.9</h1>
+            </div>
+            <h4>Arc Lengths and Areas for Sectors</h4>
+            <span>Geometry and Measurement</span>
+        </div>
+    </div>
+    <div class="col-sm-8 main dashboard">
+        <table class = 'table table-striped'>
+            <thead>
+                <tr>
+                  <th>Subcategory</th>
+                  <th>Category</th>
+                  <th>Percentage</th>
+                </tr>
+            </thead>
+            {% for dataset in subcats %}
+                <tr>
+                    <td>{{ dataset.subcategory.name }}</td>
+                    <td>{{ dataset.subcategory.category.name }}</td>
+                    <td>{{ dataset.percent }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+
 
 {% endblock content %}
