--- a/src/templates/analytics/peer_analytics.html
+++ b/src/templates/analytics/peer_analytics.html
@@ -1,14 +1,70 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+{% load staticfiles %}
 
-{% block title %}Welcome | {% endblock %}
+{% block title %}Question | {% endblock %}
 
 {% block content %}
 
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main bluebox">
-	<br>
-	<h1 class="page-header">Peer Analytics</h1>
-	<p>Sorry for the inconvenience. Our engineering team is still working on this feature. Once we have enough anonymized user data we can set up trends across different universities, majors, and other characteristics.</p>
-	
+<div class='row'>
+    <div class="col-sm-10 col-sm-offset-2 main dashboard">
+        <div class="bluebox">
+            <h1>Peer Analytics</h1>
+        </div>
+        <hr><h2>Weakest Category</h2>
+        <br>
+        <div class="gaugeholder">
+            <div class="gauge">
+                <h1>70%</h1>
+            </div>
+            <h4>{{ weakest_category_by_major.name }}</h4>
+            <span>Weakest Category by Major</span>
+        </div>
+        <div class="gaugeholder">
+            <div class="gauge gauge-offset">
+                <h1>75%</h1>
+            </div>
+            <h4>{{ weakest_category_by_university.name }}</h4>
+            <span>Weakest Category by University</span>
+        </div>
+        <div class="gaugeholder">
+            <div class="gauge offset">
+                <h1>80%</h1>
+            </div>
+            <h4>{{ weakest_category_by_state.name }}</h4>
+            <span>Weakest Category by State</span>
+        </div>
+    </div>
 </div>
+
+<div class='row'>
+    <div class="col-sm-10 col-sm-offset-2 main dashboard">
+        <br><hr><br><h2>Weakest Subcategory</h2>
+        <br>
+        <div class="gaugeholder">
+            <div class="gauge">
+                <h1>70%</h1>
+            </div>
+            <h4>{{ weakest_category_by_major.name }}</h4>
+            <span>Weakest Subcategory by Major</span>
+        </div>
+        <div class="gaugeholder">
+            <div class="gauge gauge-offset">
+                <h1>75%</h1>
+            </div>
+            <h4>{{ weakest_category_by_university.name }}</h4>
+            <span>Weakest Subcategory by University</span>
+        </div>
+        <div class="gaugeholder">
+            <div class="gauge offset">
+                <h1>80%</h1>
+            </div>
+            <h4>{{ weakest_category_by_state.name }}</h4>
+            <span>Weakest Subcategory by State</span>
+        </div>
+    </div>
+</div>
+<br>
+<br>
 
 {% endblock content %}
