--- a/static/static_dirs/css/base.css
+++ b/static/static_dirs/css/base.css
@@ -176,7 +176,7 @@ h1 {
 }
 .jumbotron {
   padding: 20px;
-  background-color: #E7E7E7;
+  background-color: #F5F5F5;
 }
 .jumbotron h1 {
   font-size: 40px;
@@ -224,7 +224,7 @@ h1 {
 }
 
 .gauge h1 {
-  font-size: 60px;
+  font-size: 65px;
   padding-top: 20px;
   color: #2c3e50;
 }
@@ -312,4 +312,36 @@ h1 {
   font-size: 0.875em;
   font-weight: bold;
   padding-bottom: 3px;
+}
+
+.indepth h2 {
+  margin: 5px;
+  font-size: 30px;
+  padding-bottom: 3px;
+}
+
+.indepth h3 {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.indepth p {
+  margin: 5px;
+}
+
+
+.panel-default>.panel-heading {
+    color: #FFF;
+    background-color: #2c3e50;
+    border-color: #2c3e50;
+}
+
+.inner-panel-default>.panel-heading {
+    color: #2c3e50;
+    background-color: #3cc47c;
+    border-color: #2c3e50;
+}
+
+.panel-group {
+    margin-bottom: 0px;
 }
